<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/error_TV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:enabled="false"
        android:visibility="gone"
        android:textSize="50sp"
        android:text="@string/error_text"
        android:gravity="center">
    </TextView>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

    <EditText
        android:id="@+id/search_bar_ET"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/search_bar_label"
        android:autofillHints="name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </EditText>

    <Button
        android:id="@+id/search_bar_BT"
        android:background="@android:drawable/ic_search_category_default"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:autofillHints="@string/search_button_label"
        app:flow_horizontalAlign="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_bar_ET">
    </Button>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pokemon_list_RV"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/search_bar_ET"
        app:layout_constraintBottom_toTopOf="@+id/navigation_buttons_layout">
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/navigation_buttons_layout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/pokemon_previous_BT"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/previous_button_label"
            android:visibility="gone" />

        <Button
            android:id="@+id/pokemon_next_BT"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button_label"
            android:visibility="gone"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>